# analog_synth

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  synth.c
src/amp/: CMakeLists.txt
src/channel/: CMakeLists.txt  channel.c  channel.h
src/fft/: fft.c
src/filter/: CMakeLists.txt  filter.c  filter.h
src/osc/: CMakeLists.txt  osc.c  osc.h
